--- a/app/views/notifier/_html_email.html.erb
+++ b/app/views/notifier/_html_email.html.erb
@@ -23,8 +23,8 @@
 	<table width="600px" cellpadding="0" cellspacing="0" border="0" align="center">
 		<tr>
 			<td width="200px" valign="top">
-				<img class="image_fix" src="//placehold.it/170&text=QR+code" alt="Your alt text" title="Your title text" width="x" height="x" />
-				<img >
+				<!-- <img class="image_fix" src="//placehold.it/170&text=QR+code" alt="Your alt text" title="Your title text" width="x" height="x" /><img > -->
+				<%= raw(@qr) %>
 			</td>
 			<td width="200px" valign="top" align="center">
 				<header class="">
