--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -7,9 +7,11 @@
 </div>
 <div class="row">
   <div class="span12">
-    <ul class=" nav nav-pills">
-      <li><%= link_to "All Events", promoter_root_path %></li>
-      <li><%= link_to "PDF", promoter_event_path(@event, format: "pdf") %></li>
+    <ul class="breadcrumb">
+      <li><a href=""><i class="icon-home"></i> Promoter Home</a><span class="divider">/</span></li>
+      <li><%= link_to "All Events", promoter_events_path %><span class="divider">/</span></li>
+      <li><a href="" class="active">Event Orders</a></li>
+      <li></li>
     </ul>
 
     <div class="modal hide fade" id="charge" tabindex="-1" role="dialog" aria-hidden="true">
@@ -35,7 +37,8 @@
 
     <%= form_tag  charge_multiple_orders_path, method: :post  do %>
     <%= submit_tag "Charge Selected", class: "btn btn-success" %>
-    <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-warning" %>
+    <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-danger" %>
+    <%= link_to "Generate pdf", promoter_event_path(@event, format: "pdf"), class: "btn" %>
       <%= hidden_field_tag "promoter", current_user.id %>
       <table class="table table-striped table-bordered" id="promoter-customers">
         <thead>
