--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -1,6 +1,66 @@
-<h2>This will be the promoter's backend</h2>
+<div class="container-fluid">
+  <div class="row-fluid row">
+    <div class="span3">
+      <div class="well sidebar-nav-fixed">
+        <ul class="nav nav-list">
+          <li class="nav-header">Today's Sales</li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li class="divider"></li>
+          <li class="nav-header">Messages</li>
+          <li><a href="">From Artist re:show</a> </li>
+          <li><a href="">From Artist re:show</a> </li>
+          <li><a href="">From Artist re:show</a> </li>
+          <li class="divider"></li>
+          <li class="nav-header">Stripe Status</li>
+          <li>
+            <% if current_user.api_key %>
+              <button class="btn btn-success">Connected <i class="icon-ok-circle icon-white"></i></button>
+            <% else %>
+              <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
+            <% end %>
+          </li>
+        </ul>
+      </div><!--/.well -->
+    </div><!--/span-->
 
-<h4> Events </h4>
+    <div class="span9 span-fixed-sidebar">
+      <div class="hero-unit">
+        <h2>Hi <%= current_user.name %></h2>
+        <p> This is your promoter admistrative area.</p>
+        <p><%= link_to "View your Events", promoter_events_path, class: "btn btn-large btn-primary" %></p>
+      </div>
+      <div class="row-fluid">
 
-<%= link_to "Your Events", promoter_events_path %>
+        <div class="span4">
+          <h2>Public Profile</h2>
 
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><%= link_to "View Profile", promoter_profile_path(current_user), class: "btn btn-large" %></p>
+        </div><!--/span-->
+        <div class="span4">
+          <h2>Your Customers</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><%= link_to "View Customers", promoter_events_path, class: "btn btn-large" %></p>
+        </div>
+
+          <div class="span4">
+          <h2>User Account</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><%= link_to "View Account", user_path(current_user), class: "btn btn-large" %></p>
+        </div><!--/span-->
+
+        </div><!--/span-->
+      </div><!--/row-->
+    </div><!--/span-->
+  </div><!--/row-->
+
+  <hr>
+
+</div><!--/.fluid-container-->​
