--- a/app/views/promoter/events/index.html.erb
+++ b/app/views/promoter/events/index.html.erb
@@ -1,22 +1,14 @@
 <div class="page-header"><h3>Your Events</h3></div>
   <div class="row">
-    <div class="span-12">
-      <br>
+    <div class="span4">
+      <ul class="breadcrumb">
+        <li><i class="icon-home"></i> <%= link_to "Promoter Home", promoter_root_path %><span class="divider">/</span></li>
+        <li><a href="" class="active">All Events</a></li>
+      </ul>
     </div>
   </div>
   <div class="row">
-    <div class="span22">
-        <div class="btn-group">
-        <%= link_to "New Event", new_promoter_event_path, class: "btn btn-primary" %>
-        <%= link_to "Profile", promoter_profile_path(current_user), class: "btn btn-primary" %>
-      </div>
-    </div>
-      <div class="span2">
-        <% if current_user.uid? && current_user.api_key? %>
-          <a class="btn btn-success">Connected to Stripe<i class="icon-ok icon-white"> </i></a>
-        <% else %>
-          <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
-        <% end %>
+    <div class="span2" id="promoter-event-new"><%= link_to "New Event", new_promoter_event_path, class: "btn" %>
     </div>
   </div>
   <div class="row">
@@ -40,6 +32,7 @@
             <td> <%= event.location.nil? %> </td>
             <td >
               <div class="btn-group pull-right">
+                <%= link_to raw('<i class="icon-list"></i>'), [:promoter, event], class: "btn" %>
                 <%= link_to raw('<i class="icon-eye-open"></i>'), event_path(event), class: "btn" %>
                 <%= link_to raw('<i class="icon-pencil"></i>'), edit_promoter_event_path(event), class: "btn" %>
               </div>
