--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="span12">
     <ul class="breadcrumb">
-      <li><a href=""><i class="icon-home"></i> Promoter Home</a><span class="divider">/</span></li>
+      <li><i class="icon-home"></i> <%= link_to "Promoter Home", promoter_root_path %><span class="divider">/</span></li>
       <li><%= link_to "All Events", promoter_events_path %><span class="divider">/</span></li>
       <li><a href="" class="active">Event Orders</a></li>
       <li></li>
@@ -36,9 +36,15 @@
     <%= will_paginate @orders %>
 
     <%= form_tag  charge_multiple_orders_path, method: :post  do %>
-    <%= submit_tag "Charge Selected", class: "btn btn-success" %>
-    <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-danger" %>
-    <%= link_to "Generate pdf", promoter_event_path(@event, format: "pdf"), class: "btn" %>
+      <div class="option-buttons">
+        <% if current_user.api_key %>
+          <%= submit_tag "Charge Selected", class: "btn btn-success", id: "charge" %>
+          <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-danger", id: "refund" %>
+        <% else %>
+          <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
+        <% end %>
+        <%= link_to "Generate pdf", promoter_event_path(@event, format: "pdf"), class: "btn" %>
+      </div>
       <%= hidden_field_tag "promoter", current_user.id %>
       <table class="table table-striped table-bordered" id="promoter-customers">
         <thead>
