--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -51,7 +51,7 @@
         </div>
 
           <div class="span4">
-          <h2>User Account</h2>
+          <h2>Your Account</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><%= link_to "View Account", user_path(current_user), class: "btn btn-large" %></p>
         </div><!--/span-->
