--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,10 @@
   </head>
   <body>
     <header id="main">
-      <a href="#" id="stroke"></a>
       <h1 class="page-header">
         100 Motels
         <small>organize live music together</small>
       </h1>
-      <a href="#" id="logo"></a>
     </header>
     <div class="navbar">
       <div class="navbar-inner">
@@ -34,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">100 Motels</a>
+          <%= link_to "100 Motels", root_path, class: "brand" %>
           <div class="nav-collapse">
             <ul class="nav">
               <li class=""><%= link_to "Home", root_path %></li>
