--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,9 @@
     <%= f.label :avatar, "Upload or Select your Avatar" %>
     <%= f.filepicker_field :avatar, button_class: "btn btn-primary btn-medium"  %>
     <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
+    <%= f.simple_fields_for :location do |location| %>
+        <%= location.input :address, required: false %>
+    <% end %>
     <% if f.object.encrypted_password.present? %>
       <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
     <% end %>
@@ -17,6 +19,7 @@
 
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
+    <%= link_to "Back", :back, class: "btn" %>
   </div>
 <% end %>
 
@@ -24,4 +27,4 @@
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
 
-<%= link_to "Back", :back %>
+
