--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,10 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
-    <% if f.object.password_required? %>
-      <%= f.input :password, :required => true %>
-      <%= f.input :password_confirmation, :required => true %>
-    <% end %>
+     <%= f.input :password, :required => true %>
   </div>
 
   <div class="form-actions">
@@ -16,4 +13,4 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%#= render "devise/shared/links" %>
