--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,9 @@
 	                  <td><%= link_to "#{Event.find(order.event_id).artist}", event_path(Event.find(order.event_id)) %></td>
 	                  <td><%= order.stripe_event %></td>
 	                  <td><%= time_tag order.created_at %></td>
-	                  <td><a href="">Cancel Order</a></td>
+	                  <% if order.stripe_event == :pending %>
+		                  <td><%= link_to raw('Cancel <i class="icon-remove"></i>'), order_path(order), class: "btn", method: :delete, confirm: "Are you sure you want to cancel your order?" %></td>
+	                 <% end %>
 	                </tr>
 	                <% end %>
 	              </tbody>
