--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,8 +54,12 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Account Settings", edit_user_registration_path %></li>
                   <li><%= link_to "User Profile", current_user %></li>
-                  <li> <%= link_to "Promoter Admin", promoter_root_path %>  </li>
-                  <li class="divider"></li>
+                  <% if user_signed_in? %>
+                    <% if current_user.has_role? :god || :promoter %>
+                    <li> <%= link_to "Promoter Admin", promoter_root_path %>  </li>
+                    <% end %>
+                  <% end %>
+                    <li class="divider"></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
                 </ul>
               </li>
