--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :email, :required => true, :autofocus => true %>
     <%= f.label :avatar, "Upload or Select your Avatar" %>
     <%= f.filepicker_field :avatar, button_class: "btn btn-primary btn-medium"  %>
+    <%= f.input :media, :required => false, :autofocus => true %>
     <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
     <% if f.object.encrypted_password.present? %>
       <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
