--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,11 +56,16 @@
                   <dt>Artist Media</dt>
                   <% if @user.media %>
                   <dd> <%= @user.media %> </dd>
-                  <dt class="user-account-spacer"></dt>
+                  <dt>Preview (opens in new tab)</dt>
                   <dd>
                     <%= link_to "Preview Media", media_preview_user_path, class: "btn", target: "_blank" %>
+                  </dd>
                   <% else %>
+                  <dd><p>You can add a Vimeo, Youtube or Soundcould playlist here.</p></dd>
+                  <!-- <dd class="user-account-spacer"></dd> -->
+                  <dd>
                     <%= link_to "Add Media", edit_user_registration_path(@user), class: "btn" %>
+                  </dd>
                   <% end %>
                   </dd>
                 </dl>
