cool added coffee for media preview

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -61,7 +61,7 @@
                     <%= link_to "Preview Media", media_preview_user_path, class: "btn", target: "_blank" %>
                   </dd>
                   <% else %>
-                  <dd><p>You can add a Vimeo, Youtube or Soundcould playlist here.</p></dd>
+                  <dd><p>You can add a Vimeo, Youtube or Soundcloud playlist here.</p></dd>
                   <!-- <dd class="user-account-spacer"></dd> -->
                   <dd>
                     <%= link_to "Add Media", edit_user_registration_path(@user), class: "btn" %>
