--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -15,13 +15,14 @@
           <li><a href="">From Artist re:show</a> </li>
           <li><a href="">From Artist re:show</a> </li>
           <li class="divider"></li>
-          <li class="nav-header">Support Requests <span class="badge badge-info pull-right">8</span></li>
-          <li><a href="">From Artist re:show</a> </li>
-          <li><a href="">From Artist re:show</a> </li>
-          <li><a href="">From Artist re:show</a> </li>
+          <li class="nav-header">Support Requests <span class="badge badge-info pull-right"><%= @support_requests.count %></span></li>
+          <% @events.each do |e| %>
+          <li><%= e.users.uniq.count %> requests for <%= e.artist %></li>
+          <% end %>
           <li class="divider"></li>
           <li>
-            <a href="" class="btn btn-large">All Requests >></a>
+            <%= link_to "All Requests >>", promoter_requests_path, class: "btn btn-large" %>
+            <!-- <a href="" class="btn btn-large">All Requests >></a> -->
           </li>
         </ul>
       </div><!--/.well -->
