removed an reinstalled a working mercury commit

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -149,3 +149,6 @@
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "8922bdf2-4f99-4c8e-af44-1b1791ab0dcf"});</script>
+<script>
+	jQuery(window).on('mercury:ready', function() { Mercury.saveUrl = '/events/' + <%= @event.id %> +"/mercury_update"; });
+</script>
