--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -1,23 +1,21 @@
 <div class="container-fluid">
   <div class="row-fluid row">
     <div class="span3">
-      <div class="well sidebar-nav-fixed" id="base-sidebar">
+      <div class="well sidebar-nav-fixed" id="">
         <ul class="nav nav-list">
-          <li class="nav-header">Today's Sales <span class="badge badge-info pull-right">8</span></li>
-          <li><a href="">Crete Boom, 2 tickets</a> </li>
-          <li><a href="">Crete Boom, 2 tickets</a> </li>
-          <li><a href="">Crete Boom, 2 tickets</a> </li>
-          <li><a href="">Crete Boom, 2 tickets</a> </li>
-          <li><a href="">Crete Boom, 2 tickets</a> </li>
+          <li class="nav-header">Today's Sales <span class="badge badge-info pull-right"><%= @sales.count %></span></li>
+          <% @sales.each do |s| %>
+          <dd><%= s.name %>, <%= Event.find(s.event_id).artist %>, <%= pluralize(s.quantity, "ticket") %></dd>
+          <% end %>
           <li class="divider"></li>
           <li class="nav-header">Tour requests <span class="badge badge-info pull-right">8</span></li>
           <li><a href="">From Artist re:show</a> </li>
           <li><a href="">From Artist re:show</a> </li>
           <li><a href="">From Artist re:show</a> </li>
           <li class="divider"></li>
-          <li class="nav-header">Support Requests <span class="badge badge-info pull-right"><%= @events.count %></span></li>
-          <% @events.each do |e| %>
-          <li><%= e.users.uniq.count %> requests for <%= e.artist %></li>
+          <li class="nav-header">Support Requests <span class="badge badge-info pull-right"><%= @requests.count %></span></li>
+          <% @requests.each do |r| %>
+          <dd><%= r.user.name %> <%= distance_of_time_in_words_to_now(r.created_at, include_seconds = false) %> ago</dd>
           <% end %>
           <li class="divider"></li>
           <li>
