--- a/app/views/promoter/base/requests.html.erb
+++ b/app/views/promoter/base/requests.html.erb
@@ -1,25 +1,43 @@
-<table class="table" id="requests">
-  <thead>
-    <tr>
-      <th>Event</th>
-      <th>Name</th>
-      <th>Email</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @events.each do |event| %>
-      <% for user in event.users do %>
-        <tr>
-          <td><%=  %></td>
-          <td><%= event.artist %>, <%= event.venue %>, <%= time_tag event.date %></td>
-          <td><%= user.name %></td>
-          <td><%= user.email %></td>
-          <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{user.media_html}"} %></td>
-        </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <div class="span2">
+    <p>    <%= link_to "Back", promoter_root_path, class: "btn btn-large" %></p>
+  </div>
+  <div class="span12">
+    <div class="tabbable tabs">
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#tour" data-toggle="tab">Tour Requests</a></li>
+        <li class=""><a href="#support" data-toggle="tab">Support Requests</a></li>
+      </ul>
+    </div>
+    <div class="tab-content">
+      <div class="tab-pane" id="support">
+        <table class="table" id="requests">
+          <thead>
+            <tr>
+              <th>Requested</th>
+              <th>Event</th>
+              <th>Name</th>
+              <th>Email</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @events.each do |event| %>
+              <% for request in event.requests do %>
+                <tr>
+                  <td><%= distance_of_time_in_words_to_now(request.created_at, include_seconds = false) %> ago</td>
+                  <td><%= event.artist %>, <%= event.venue %>, <%= time_tag event.date %></td>
+                  <td><%= request.user.name %></td>
+                  <td><%= request.user.email %></td>
+                  <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{request.user.media_html}"} %></td>
+                </tr>
+              <% end %>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="modal large hide fade" id="preview-modal">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
