--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -102,7 +102,7 @@
 		<div class="label-box">About the Artists</div>
 		<div class="row">
 			<div class="span4">
-				<div id="event-about" class="mercury-region" data-type="editable">
+				<div id="event-about" data-mercury="full">
 					<% if @event.about? %>
 						<%= raw @event.about  %>
 					<% else %>
@@ -146,9 +146,7 @@
 			</div>
 	</section>
 </div>
+
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "8922bdf2-4f99-4c8e-af44-1b1791ab0dcf"});</script>
-<script>
-	jQuery(window).on('mercury:ready', function() { Mercury.saveUrl = '/events/' + <%= @event.id %> +"/mercury_update"; });
-</script>
