fixed up some stuff on the order show page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,27 +4,21 @@
 			<div class="well">
 				<header>
 					<h2>Thanks <%= @order.name %>!... <br>
-						<small>Your payment was successful.</small>
+						<small>Your order was successful.</small>
 					</h2>
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						An email has been sent to <%= @order.email %> with your ticket. Please note that your card won't be charged until the overall promotion of the show has succeeded. This is done to minimize bank charges should the show not reach its funding target in the alloted time. If you don't have sufficient funds available when the charge is applied, the vendor will automatically retry the charge three times and then cancel your order. In the event of a promoter / artist cancellation, i.e. a refund situation, you will be repaid the full amount of the charge, <%= link_to "full T&C", info_path %>.
 					</p>
 				</header>
 				<% unless user_signed_in? %>
-						<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+						<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: ""}) do |f| %>
 						  <%= f.error_notification %>
-						  <div class="form-inputs">
+
 						    <%= f.input :email, as: :hidden, input_html: { value: @order.email } %>
-						    <div class="input-append">
-						      <%= f.input :password, required: true, label: false, id: "appendedInputButton", input_html: { class: "span2"} %>
-						  		<%= f.button :submit, "Save my account" %>
-						    </div>
-						  </div>
+					      <%= f.input :password, wrapper: :prepend, required: true, label: false, html: { class: ""} do %>
+						      <%= f.input_field :password, placeholder: "enter a password" %>
+						      	<%= f.button :submit, "Save my account" %>
+				      	<% end %>
 						<% end %>
 				<% end %>
 			</div>
